[tool.poetry]
name = "face-recognition"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
dvc = {extras = ["gdrive"], version = "^3.49.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

