[tool.poetry]
name = "face-recognition"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
dvc = {extras = ["gdrive"], version = "^3.49.0"}
numpy = "^1.26.4"
torch = "^2.2.2"
torchvision = "^0.17.2"
matplotlib = "^3.8.4"
scikit-learn = "^1.4.2"
tqdm = "^4.66.2"
ipywidgets = "^8.1.2"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

